--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "moment": "^2.22.1",
     "react": "^16.3.2",
     "react-dom": "^16.3.2",
+    "react-google-maps": "^9.4.5",
     "react-scripts-ts": "2.15.1",
     "semantic-ui-react": "^0.79.1"
   },
