--- a/package.json
+++ b/package.json
@@ -4,8 +4,10 @@
   "private": true,
   "dependencies": {
     "@types/googlemaps": "^3.30.8",
+    "@types/lodash": "^4.14.107",
     "@types/markerclustererplus": "^2.1.33",
     "axios": "^0.18.0",
+    "lodash": "^4.17.5",
     "moment": "^2.22.1",
     "react": "^16.3.2",
     "react-dom": "^16.3.2",
